--- a/bij.html
+++ b/bij.html
@@ -6,6 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="tekst">
+<h1>bijen en hoornaars</h1>
+    </div>
 </body>
 </html>
