--- a/bij.html
+++ b/bij.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="bij.css">
 </head>
 <body>
+    <div class="geheel">
     <div class="tekst">
-<h1>bijen en hoornaars</h1>
+<h1 class="h1">bijen en hoornaars</h1>
     </div>
+</div>
 </body>
 </html> 
