--- a/bij.html
+++ b/bij.html
@@ -12,5 +12,9 @@
 <h1 class="h1">bijen en hoornaars</h1>
     </div>
 </div>
+<div class="header">
+    <img src="ChatGPT_Image_9_mei_2025__13_42_50-removebg-preview.png" alt="bijen en hoornaars">
+  </div>
+  
 </body>
 </html> 
